ошибка формирования списка детей

--- a/template/budget/budget.html
+++ b/template/budget/budget.html
@@ -169,7 +169,7 @@ function find_children(className) {
 
 function open_rows(className) {
 
-                element = document.getElementById(className);
+                children_list = [];
                 
                 list = document.getElementsByClassName(className);            
 
