--- a/template/static/error.html
+++ b/template/static/error.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <h1 class="error">Ваш бюджет не сходится</h1>
+<br><br>
+<p>Скорее всего органы власти при составлении бюджета просто допустили ошибку. Где конкретно - наш портал пока указать не может.</p>
+<p>Если же вы считаете, что это все-таки наша ошибка - пожалуйста, <a href="http://openbudget.reformal.ru/" target="_blank">сообщите</a> нам и не забудьте прикрепить файл с бюджетом.</p>
 
-<p>Это может быть из-за того, что в бюджете, что вы пытаетесь загрузить, встречаются пустые или нулевые строки.</p>
-<p></p>
-<p>Но скорее всего органы власти просто допустили ошибку. Где конкретно - наш портал пока указать не может.</p>
 {% endblock %}
