--- a/template/budget/index.html
+++ b/template/budget/index.html
@@ -34,7 +34,7 @@
               </div>
             </div>
           <div class="col-lg-6">
-            <h1>Загружаем Excel-файл...</h1>
+            <h1><a href="{% url add %}" target="_blank">Загружаем</a> Excel-файл...</h1>
             <p class="lead">...получаем JSON, CSV, несколько видов визуализации бюджета и благодарность жителей России!</p>
           </div>
           <div class="col-lg-6">
