--- a/template/budget/budget.html
+++ b/template/budget/budget.html
@@ -19,8 +19,9 @@
                <b>Период: год</b><br>
             {% endif %}    
             <b>{{ doc.get_fed_region_local_display}}</b><br><br>            
-            План/факт: {{ doc.get_plan_fact_display }}<br>
+            План/факт/уточнение: {{ doc.get_plan_fact_display }}<br>
             Доходы/расходы: {{ doc.get_in_out_display }}<br>
+            Валюта бюджета: рубли<br>
 
             {% if doc.description != "" %}
                 <br>
