--- a/template/base-main.html
+++ b/template/base-main.html
@@ -89,7 +89,7 @@
 
         {% block content %}{% endblock %}
 <hr>
-<footer style="margin: 3em 0 3em 0;">
+<footer style="margin: 3em 0 0 0;">
 <div class="row">
           <div class="col-lg-4">
 <!-- Put this script tag to the <head> of your page -->
