--- a/template/base-main.html
+++ b/template/base-main.html
@@ -66,9 +66,13 @@
                 <li><a tabindex="-1" href="/local/">Муниципальные</a></li>
               </ul>
             </li>
-            <li>
-              <a href="/map/">Карта</a>
-            </li>            
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="/all/" id="themes">Карты <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a tabindex="-1" href="/regional-map/">Бюджеты по регионам</a></li>
+                <li><a tabindex="-1" href="/local-map/">Муниципальные бюджеты</a></li>
+              </ul>
+            </li>           
 <!--            <li><a href="/where/">Где взять бюджет?</a></li> -->
             <li>
               <a href="/about/">О проекте</a>
