--- a/template/static/intentions.html
+++ b/template/static/intentions.html
@@ -10,7 +10,7 @@
 
 <h3>Ближайшие планы</h3>
 <ul>
-    <li>Добавить разные цвета в TreeMap и BubbleTree</li>
+    <li>Добавить разные цвета в BubbleTree</li>
     <li>Внедрение механизмов визуализации BubbleCharts(<a href="http://www.chriswhong.com/nycbudget/" target="_blank">пример</a>), OneGrain(<a href="http://theopenbudget.org/" target="_blank">пример</a>)</li>
     <li>Импорт данных из xlsx- и odt-фалов</li>
     <li>Экспорт данных в виде embed-html-кода для публикации на сторонних страницах</li>
@@ -20,11 +20,13 @@
 
 <h3>В будущем</h3>
 <ul>
+    <li>Создание личного кабинета и возможности редактирования загруженных бюджетов</li>
+    <li>Визуализация структуры правительства РФ</li>
     <li>Загрузка svg-карт всех регионов РФ и наложение их на карты Google или Яндекс для удобного поиска (кстати, если такое уже существует - <a href="http://openbudget.reformal.ru/">сообщите</a>, пожалуйста. Или хотя бы svg-карта России с детализацией до муниципального образования).</li>
     <li>Экспорт данных на портал <a href="http://openspending.org">OpenSpending.org</a></li>
-    <li>Создание API для работы с порталом.</li>
-    <li>Загрузка и визуализация деклараций чиновников.</li>
-    <li>Реестр всех муниципальных образований России.</li>
+    <li>Создание API для работы с порталом</li>
+    <li>Загрузка и визуализация деклараций чиновников</li>
+    <li>Реестр всех муниципальных образований России</li>
 </ul>
 <br>
 <p><b>Вы можете ускорить реализацию этого функционала, совершив <a href="/donate/">донейт</a></b></p>
