--- a/template/static/about.html
+++ b/template/static/about.html
@@ -17,12 +17,14 @@
 <br>
 <p>В процессе работы над порталом были использованы технологии:
 <ul>
-    <li><a href="https://github.com/okfn/bubbletree/wiki/Bubble-Tree-Documentation" target="_blank">BubbleTree</a> - разработаного <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a></li>
+    <li><a href="https://www.djangoproject.com/" target="_blank">Django</a></li>
     <li><a href="http://bootswatch.com/" target="_blank">Bootswatch</a> на базе <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> со шрифтами от <a href="http://www.google.com/fonts/" target="_blank">Google</a>.</li>
+    <li><a href="https://github.com/okfn/bubbletree/wiki/Bubble-Tree-Documentation" target="_blank">BubbleTree</a> - разработаного <a href="http://okfn.org" target="_blank">Open Knowledge Foundation</a></li>
     <li><a href="http://raphaeljs.com/" target="_blank">RaphaelJS</a></li>
+    <li><a href="https://developers.google.com/maps/?hl=ru" target="_blank">Google Maps API 3.0</a></li>
 </ul>
 
-Весь проект, а также скрипты формирования TreeMap и динамических таблиц находятся на <a href="https://github.com/ChooJoy?tab=repositories" target="_blank">GitHub</a>.
+<a href="https://github.com/ChooJoy/VisualBudget" target="_blank">Весь проект</a>, а также скрипты формирования <a href="https://github.com/ChooJoy/treemap" target="_blank">TreeMap</a> и <a href="https://github.com/ChooJoy/table_budget" target="_blank">динамических таблиц</a> находятся на <a href="https://github.com/ChooJoy?tab=repositories" target="_blank">GitHub</a>.
 
 <br><br><br>
 <p>Проект создан Станиславом Шакировым aka <a href="https://choojoy.ru" target="_blank">ChooJoy</a> в рамках проекта <b>Интерактивная инфографика</b> - <a href="http://i-graph.org" target="_blank"><b>i-graph.org</b></a></p>
