--- a/template/budget/add.html
+++ b/template/budget/add.html
@@ -64,19 +64,18 @@
           </div>
           <div class="col-lg-4">
             <div class="bs-example">
-                {{ form.sheet_number.label_tag }}
+                {{ form.sheet_number.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.sheet_number }}
-                {{ form.name_column.label_tag }} 
+                {{ form.name_column.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.name_column }}
-                {{ form.amount_column.label_tag }}
+                {{ form.amount_column.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.amount_column }}
-                {{ form.sum_row.label_tag }} 
+                {{ form.sum_row.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.sum_row }}
-                {{ form.start_budget.label_tag }} 
+                {{ form.start_budget.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.start_budget }}
-                {{ form.finish_budget.label_tag }}
+                {{ form.finish_budget.label_tag }} <a href="/helpdoc/" target="_blank"><span class="label label-success">?</span></a>
                 {{ form.finish_budget }}
-                
              </div>
           </div>
     </div>
